# M2_Mesh_Geom_and_Alg

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
includes/ImgEditorEngine/: ImgEditorEngine.h
includes/Openglutils/: Buffers.h  Program.h  Texture.h  camera.h  input.h
includes/RenderContext/: ImGuiAppContext.h
includes/UiWindows/: GlobalStates.h  ImgEditor.h  UiCompUtils.h
includes/Utils/: Mat.h  Vec.h
ressources/shaders/: meshshade.fs  meshshade.vs
src/Core/: ImgApp.cpp
src/ImgEditorEngine/: ImgEditorEngine.cpp
src/Openglutils/: Buffers.cpp  Program.cpp  Texture.cpp
src/RenderContext/: ImGuiAppContext.cpp
src/TP/: Makefile  Mesh.cpp  Mesh.h  MeshHelper.cpp  MeshHelper.h  Mesh_IO.cpp  Mesh_IO.h  README.md  Vertices.cpp  Vertices.h  alpes.txt  alpesb.txt  alpesc.txt  alpesd.txt
src/UiWindows/: GlobalStates.cpp  ImgEditor.cpp  UiCompUtils.cpp
src/Utils/: Imloader.cpp  Mat.cpp
